<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nuevo_Caso_Fragment"
            android:icon="@drawable/ic_new_caso"
            android:title="@string/titulo" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_cerrar_caso"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_historial"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/logofFragment"
            android:icon="@drawable/ic_baseline_how_to_reg_24"
            android:title="@string/logoff" />
    </group>
</menu>