<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.iams.controldeequipos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nuevo_Caso_Fragment"
            app:destination="@id/nuevo_Caso_Fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_logofFragment"
            app:destination="@id/logofFragment"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.iams.controldeequipos.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.iams.controldeequipos.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nuevo_Caso_Fragment"
        android:name="com.iams.controldeequipos.ui.nuevo.nuevo_Caso_Fragment"
        android:label="fragment_nuevo__caso_"
        tools:layout="@layout/fragment_nuevo__caso_" />
    <fragment
        android:id="@+id/logofFragment"
        android:name="com.iams.controldeequipos.ui.logOff.LogofFragment"
        android:label="LogofFragment" />
</navigation>